[gd_scene load_steps=2 format=3 uid="uid://dyepav72vucif"]

[ext_resource type="Script" uid="uid://chm7ql130a343" path="res://UI/equipment_tooltip.gd" id="1_dyp3d"]

[node name="EquipmentTooltip" type="PanelContainer"]
custom_minimum_size = Vector2(200, 100)
offset_right = 200.0
offset_bottom = 147.0
script = ExtResource("1_dyp3d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "name"

[node name="Description" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "description
g
g"

[node name="EffectContainer" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ActionContainer" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 10

[node name="PanelC" type="PanelContainer" parent="MarginContainer/VBox/HBox"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="MarginContainer/VBox/HBox/PanelC"]
layout_mode = 2
text = "value"

[node name="PanelC2" type="PanelContainer" parent="MarginContainer/VBox/HBox"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Weight" type="Label" parent="MarginContainer/VBox/HBox/PanelC2"]
layout_mode = 2
text = "weigth"
horizontal_alignment = 2
